# ez-tauri-cli

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
src/commands/: add.js  create.js  doctor.js  init.js  modules.js
src/utils/: files.js  logo.js  validation.js
templates/full/: CHANGELOG.md  Dockerfile  LICENSE  README.md  TEMPLATE_VARIABLES.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  index.html  logging.config.js  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.js  vite.config.prod.ts  vite.config.ts  vitest.config.ts  wdio.config.ts
templates/full/database/init/: 01_init.sql  02_seed.sql
templates/full/docs/: CHANGELOG_GUIDE.md
templates/full/scripts/: brand-utils.mjs  check-release-version.mjs  ez-build.mjs  ez-db.mjs  ez-deploy.mjs  ez-dev.mjs  ez-docker.mjs  ez-lint.mjs  ez-tauri.mjs  ez-test.mjs  generate-changelog.mjs  process-template.mjs  run-tauri-dev.mjs
templates/full/src/: App.test.tsx  App.tsx  index.css  main.tsx  router.tsx
templates/full/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
templates/full/src-tauri/capabilities/: default.json
templates/full/src-tauri/src/: errors.rs  lib.rs  main.rs  rate_limiter.rs  rate_limiter_test.rs  stronghold.rs  validation.rs
templates/full/src-tauri/src/cache/: mod.rs
templates/full/src-tauri/src/config/: mod.rs
templates/full/src-tauri/src/database/: connection.rs  migrations.rs  mod.rs  test_utils.rs
templates/full/src-tauri/src/handlers/: cache.rs  database.rs  filesystem.rs  logs.rs  mod.rs  rate_limited.rs  system.rs  users.rs
templates/full/src-tauri/src/logging/: config.rs  handlers.rs  mod.rs
templates/full/src-tauri/src/models/: logs.rs  mod.rs  settings.rs  user.rs
templates/full/src/api/: database.ts  index.ts  system.ts
templates/full/src/components/: ErrorBoundary.tsx  ErrorHandlingDemo.tsx  LoadingSpinner.tsx  ThemeToggle.tsx  index.ts
templates/full/src/config/: theme.ts
templates/full/src/hooks/: index.ts  useTheme.ts
templates/full/src/layouts/: Layout.tsx
templates/full/src/pages/: Home.tsx
templates/full/src/schemas/: index.ts
templates/full/src/stores/: appStore.ts  index.ts  notificationStore.ts
templates/full/src/test/: setup.ts
templates/full/src/types/: database.ts  system.ts
templates/full/src/utils/: api-wrapper.ts  error-handling.ts  logger.ts  sanitization.ts
templates/full/test-results/: .last-run.json  results.xml
(+9 files in other folders)
